--- a/Programs/CountItemSets/Form1.resx
+++ b/Programs/CountItemSets/Form1.resx
@@ -226,7 +226,7 @@
     <value>6, 19</value>
   </data>
   <data name="dataGridViewResults.Size" type="System.Drawing.Size, System.Drawing">
-    <value>885, 341</value>
+    <value>885, 360</value>
   </data>
   <data name="dataGridViewResults.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -346,7 +346,7 @@
     <value>3, 154</value>
   </data>
   <data name="groupBoxAssociationRules.Size" type="System.Drawing.Size, System.Drawing">
-    <value>899, 366</value>
+    <value>899, 385</value>
   </data>
   <data name="groupBoxAssociationRules.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
@@ -2005,7 +2005,7 @@
     <value>3, 3, 3, 3</value>
   </data>
   <data name="tabPage1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>911, 692</value>
+    <value>911, 630</value>
   </data>
   <data name="tabPage1.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -2773,10 +2773,10 @@
     <value>30</value>
   </data>
   <data name="groupBox10.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 527</value>
+    <value>3, 545</value>
   </data>
   <data name="groupBox10.Size" type="System.Drawing.Size, System.Drawing">
-    <value>898, 159</value>
+    <value>898, 138</value>
   </data>
   <data name="groupBox10.TabIndex" type="System.Int32, mscorlib">
     <value>12</value>
@@ -2855,6 +2855,9 @@
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>920, 740</value>
+  </data>
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Market Basket Analyzer</value>
