--- a/Programs/CountItemSets/Form1.sv.resx
+++ b/Programs/CountItemSets/Form1.sv.resx
@@ -120,34 +120,13 @@
   <data name="groupBox9.Text" xml:space="preserve">
     <value>Vara Max Stöd</value>
   </data>
-  <data name="groupBox8.Text" xml:space="preserve">
-    <value>Slutsats - Grupper</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>56, 13</value>
-  </data>
-  <data name="label3.Text" xml:space="preserve">
-    <value>Innehåller:</value>
-  </data>
-  <data name="groupBox7.Text" xml:space="preserve">
-    <value>Villkor - Grupper</value>
-  </data>
-  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>56, 13</value>
-  </data>
-  <data name="label2.Text" xml:space="preserve">
-    <value>Innehåller:</value>
-  </data>
   <data name="groupBox4.Text" xml:space="preserve">
     <value>Stöd</value>
   </data>
   <data name="groupBox3.Text" xml:space="preserve">
     <value>Lyft</value>
   </data>
-  <data name="groupBox2.Text" xml:space="preserve">
-    <value>Förtroende</value>
-  </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="newToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -262,23 +241,8 @@
         PdXm80/AfDokTVu+8DfPXv9XCcIPTvjvLQ8YoakAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="groupBox13.Text" xml:space="preserve">
-    <value>Exkludera Varor</value>
-  </data>
-  <data name="groupBox11.Text" xml:space="preserve">
-    <value>Frekventa Varukombinationer</value>
-  </data>
-  <data name="groupBox5.Text" xml:space="preserve">
-    <value>Grundläggande Varukorgsanalys</value>
-  </data>
-  <data name="groupBox6.Text" xml:space="preserve">
-    <value>Min Stöd</value>
-  </data>
-  <data name="groupBox10.Text" xml:space="preserve">
-    <value>Regel</value>
-  </data>
   <data name="label13.Location" type="System.Drawing.Point, System.Drawing">
-    <value>54, 66</value>
+    <value>34, 66</value>
   </data>
   <data name="label13.Size" type="System.Drawing.Size, System.Drawing">
     <value>32, 13</value>
@@ -291,7 +255,7 @@
     <value>Top, Right</value>
   </data>
   <data name="label9.Location" type="System.Drawing.Point, System.Drawing">
-    <value>54, 116</value>
+    <value>35, 116</value>
   </data>
   <data name="label9.Size" type="System.Drawing.Size, System.Drawing">
     <value>32, 13</value>
@@ -306,15 +270,30 @@
     <value>Top, Right</value>
   </data>
   <data name="label8.Location" type="System.Drawing.Point, System.Drawing">
-    <value>39, 91</value>
+    <value>27, 91</value>
   </data>
   <data name="label8.Size" type="System.Drawing.Size, System.Drawing">
-    <value>48, 13</value>
+    <value>39, 13</value>
   </data>
   <data name="label8.Text" xml:space="preserve">
-    <value>Grupper:</value>
+    <value>Grupp:</value>
   </data>
   <data name="label8.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>TopRight</value>
+  </data>
+  <data name="groupBox10.Text" xml:space="preserve">
+    <value>Regel</value>
+  </data>
+  <data name="groupBox13.Text" xml:space="preserve">
+    <value>Exkludera Varor</value>
+  </data>
+  <data name="groupBox11.Text" xml:space="preserve">
+    <value>Frekventa Varukombinationer</value>
+  </data>
+  <data name="groupBox5.Text" xml:space="preserve">
+    <value>Grundläggande Varukorgsanalys</value>
+  </data>
+  <data name="groupBox6.Text" xml:space="preserve">
+    <value>Min Stöd</value>
   </data>
 </root>
